--- a/workflowui/workflows/templates/workflows/edit.html
+++ b/workflowui/workflows/templates/workflows/edit.html
@@ -163,10 +163,10 @@
               </div>
               <div class="properties-form__field">
                 <div class="properties-label">
-                  <label>Key</label>
+                  <label>Variable or Value or Property</label>
                 </div>
                 <div class="properties-input">
-                  <input name="inputs-key-${index}" class="form-control input-sm" type="text" value="${value.key}" />
+                  <textarea name="inputs-key-${index}" class="form-control input-sm" type="text">${value.key}</textarea>
                 </div>
               </div>
             </div>
