Adding dependency port and select dropdown for it.

--- a/workflowui/static/css/_variables.scss
+++ b/workflowui/static/css/_variables.scss
@@ -5,5 +5,6 @@ $success-color: #18BC9C;
 $selected-color: #3498DB;
 $input-port-color: #40D47E;
 $output-port-color: #E74C3C;
+$dependency-port-color: #3498DB;
 $connector-color: #e67e22;
 $dependency-connector-color: #2C3E50;
