Pretty print json.

--- a/workflowui/workflows/templates/workflows/execute.html
+++ b/workflowui/workflows/templates/workflows/execute.html
@@ -16,7 +16,7 @@
         <tr>
           <th>Definition</th>
           <td>
-            <code>{{ workflow.definition }}</code>
+            <pre>{{ workflow.definition_json }}</pre>
           </td>
         </tr>
       </tbody>
