--- a/workflowui/workflows/templates/workflows/monitor.html
+++ b/workflowui/workflows/templates/workflows/monitor.html
@@ -33,9 +33,7 @@
     </div>
     <div class="col-md-6">
       <h5>Properties</h5>
-      <code>
-        {{ workflow_run.properties|jsonify }}
-      </code>
+      <pre>{{ workflow_run.properties_json }}</pre>
     </div>
 
     <div style="clear: both;"></div>
