--- a/workflowui/workflows/templates/workflows/edit.html
+++ b/workflowui/workflows/templates/workflows/edit.html
@@ -26,6 +26,14 @@
           Run
         </a>
       </div>
+      <div class="workflow-info">
+        <div class="name" id="workflow-name">
+          {{ workflow.name }}
+        </div>
+        <div class="description" id="workflow-description">
+          {{ workflow.description }}
+        </div>
+      </div>
     </div>
     <div class="workflow-properties" id="workflow-properties"></div>
   </div>
