--- a/workflowui/static/css/style.css
+++ b/workflowui/static/css/style.css
@@ -117,6 +117,21 @@ body {
   bottom: 20px;
   right: 20px; }
 
+.workflow-info {
+  display: inline-block;
+  position: absolute;
+  bottom: 20px;
+  left: 20px;
+  opacity: 0.6; }
+  .workflow-info:hover {
+    opacity: 1; }
+  .workflow-info .name {
+    font-size: 28px;
+    color: #000; }
+  .workflow-info .description {
+    font-size: 14px;
+    color: #999; }
+
 .properties-form {
   padding: 15px; }
   .properties-form.properties-form--large label {
