--- a/workflowui/dashboard/templates/base.html
+++ b/workflowui/dashboard/templates/base.html
@@ -50,5 +50,6 @@
     <script type="text/javascript" src="http://d3js.org/d3.v3.min.js"></script>
 
     {% block extra-head %}{% endblock extra-head %}
+    <p>&nbsp;</p>
   </body>
 </html>
